# elasticsearch-operator

./: .gitignore  BUILD.bazel  Makefile  WORKSPACE
cmd/manager/: BUILD.bazel  main.go
deploy/: operator.yaml  role.yaml  role_binding.yaml
deploy/crds/: database_v1alpha1_elasticsearchcluster_cr.yaml  database_v1alpha1_elasticsearchcluster_crd.yaml  database_v1alpha1_elasticsearchindextemplate_cr.yaml  database_v1alpha1_elasticsearchindextemplate_crd.yaml
pkg/apis/: BUILD.bazel  addtoscheme_database_v1alpha1.go
pkg/apis/database/v1alpha1/: BUILD.bazel  doc.go  elasticsearchcluster_types.go  elasticsearchindextemplate_types.go  register.go  zz_generated.deepcopy.go  zz_generated.openapi.go
pkg/controller/: BUILD.bazel  add_elasticsearchcluster.go  add_elasticsearchindextemplate.go
pkg/controller/elasticsearchcluster/: BUILD.bazel  elasticsearchcluster_controller.go
pkg/controller/elasticsearchindextemplate/: elasticsearchindextemplate_controller.go
version/: BUILD.bazel
