load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "elasticsearchcluster_types.go",
        "register.go",
        "zz_generated.deepcopy.go",
        "zz_generated.defaults.go",
        "zz_generated.openapi.go",
    ],
    importpath = "github.com/f110/elasticsearch-operator/pkg/apis/database/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/go-openapi/spec:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
        "//vendor/k8s.io/kube-openapi/pkg/common:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/runtime/scheme:go_default_library",
    ],
)
